# opencuboids

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: camera.rs  chunk.wgsl  chunk_renderer.rs  input.rs  main.rs  network.rs  physics.rs  player.rs  renderer.rs  shader.wgsl  state.rs  texture.rs  time.rs  window.rs
client/src/render/: bind_group.rs  buffer.rs  chunk.wgsl  chunk_renderer.rs  main_renderer.rs  mod.rs  render_pipeline.rs  texture.rs
client/src/renderer/: bind_group.rs  chunk_renderer.rs  main_renderer.rs  mod.rs  render_pipeline.rs  texture.rs
client/src/world/: chunk.rs  chunk_manager.rs  mod.rs  physics.rs  player.rs
common/: Cargo.toml
common/src/: chunk.rs  lib.rs  network.rs
server/: Cargo.toml
server-cli/: Cargo.toml
server-cli/src/: main.rs
server/src/: lib.rs  world_gen.rs
