[package]
name = "opencuboids-client"
version = "0.0.0"
edition = "2021"
authors = ["Calbabreaker <calbabreaker@gmail.com>"]

[dependencies]
opencuboids-common = { path = "../common" }
opencuboids-server = { path = "../server" }

bevy_app = "0.9.1"
bevy_ecs = "0.9.1"
bevy_utils = "0.9.1"
bytemuck = { version = "1.12.3", features = ["derive"] }
glam = { version = "0.22.0", features = ["bytemuck"] }
image = { version = "0.24.5", default-features = false, features = ["png"] }
log = "0.4.17"
pollster = "0.2.5"
wgpu = "0.14.2"
winit = "0.27.5"
crossbeam-channel = "0.5.6"
noise = { version = "0.8.2", default-features = false }
